--- a/AoC.csproj
+++ b/AoC.csproj
@@ -23,10 +23,9 @@
         <None Update="2022\Day1\data.txt">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-    </ItemGroup>
-
-    <ItemGroup>
-        <Folder Include="2022"/>
+        <None Update="2022\Day5\instructions.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
