🔨 Wrap up the 2022 directory. Repository cleanup

--- a/2022/AoC.csproj
+++ b/2022/AoC.csproj
@@ -29,6 +29,9 @@
         <None Update="2022\Day6\datastream.txt">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Day6\datastream.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
